1. Улучшения Collection API [#282311]